# interpretability-llms-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: README.md  main.tf  (+2 more)
implementations/agentic_vqa_eval/: README.md  analysis.ipynb  pyproject.toml  run_pipeline.ipynb
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/: __init__.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/agents/: __init__.py  planner_agent.py  verifier_agent.py  vision_agent.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/datasets/: __init__.py  chartqapro_loader.py  perceived_sample.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/eval/: __init__.py  dashboard.py  error_taxonomy.py  eval_outputs.py  eval_topk.py  eval_traces.py  judge.py  report.py  summarize.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/langfuse_integration/: __init__.py  client.py  dataset.py  ingest.py  prompts.py  tracing.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/mep/: __init__.py  schema.py  writer.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/opik_integration/: client.py  dataset.py  ingest.py  prompts.py  tracing.py
implementations/agentic_vqa_eval/src/agentic_chartqapro_eval/runner/: __init__.py  run_generate_meps.py
implementations/mechanistic_interpretability/: Mechanistic_Interpretability_LLM_Tutorial.ipynb  Mechanistic_Interpretability_VLM_Tutorial.ipynb  README.md  pyproject.toml
implementations/mechanistic_interpretability/src/: Mechanistic_Interpretability_LLM_Tutorial.ipynb  Mechanistic_Interpretability_VLM_Tutorial.ipynb
(+110 files in other folders)
