[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-interp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers==5.3.0",
    "pillow==12.1.1",
    "accelerate==1.13.0",
    "requests==2.32.5",
    "matplotlib==3.10.8",
    "numpy==2.0.2",
    "tqdm==4.67.3",
    "huggingface_hub==1.5.0",
    "torch==2.10.0+cu128",
]