[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-interp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers==4.57.6",
    "pillow==11.3.0",
    "accelerate==1.13.0",
    "requests==2.32.5",
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "tqdm==4.67.3",
    "huggingface-hub==0.36.2",
    "torch==2.10.0",
    "transformer-lens==2.17.0",
    "sae-lens==6.37.6",
]